Reverted last commit and fixed jacoco config